--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="김가은 포트폴리오">
+    <meta property="og:description" content="김가은의 포트폴리오 입니다">
+    <meta property="og:url" content="https://kim1115.github.io/portfolio/">
+    <meta property="og:image" content="img/port_thum.jpg">
     <!-- 폰트어썸 -->
     <script src="https://kit.fontawesome.com/b6e7e1a1b5.js" crossorigin="anonymous"></script>
     
@@ -111,7 +115,7 @@
                                 </p>
                                 <div class="barogagi">
                                     <a href="https://www.cheonan.go.kr/" target="_blank" class="paper-btn">원본사이트</a>
-                                    <a href="../cheonan/index.html" target="_blank" class="paper-btn">클론사이트</a>
+                                    <a href="https://kim1115.github.io/cheonan/" target="_blank" class="paper-btn">클론사이트</a>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +134,7 @@
                                 </p>
                                 <div class="barogagi">
                                     <a href="http://almondkidsbusan.com/" target="_blank" class="paper-btn">원본사이트</a>
-                                    <a href="../amond/index.html" target="_blank" class="paper-btn">클론사이트</a>
+                                    <a href="https://kim1115.github.io/amond/" target="_blank" class="paper-btn">클론사이트</a>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +210,7 @@
                             </p>
                             <div class="barogagi">
                                 <a href="https://www.goodchoice.kr/" target="_blank" class="paper-btn">원본사이트</a>
-                                <a href="../yugi/index.html" target="_blank" class="paper-btn">작업물</a>
+                                <!-- <a href="../yugi/index.html" target="_blank" class="paper-btn">작업물</a> -->
                                 <a href="img/yugi.png" target="_blank" class="paper-btn">Overview</a>
                             </div>
                         </div>
