--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <meta property="og:image" content="img/port_thum.jpg">
     <!-- 폰트어썸 -->
     <script src="https://kit.fontawesome.com/b6e7e1a1b5.js" crossorigin="anonymous"></script>
-    
+    <!-- paper -->
+    <link rel="stylesheet" href="css/paper.css">
     <!-- my -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Document</title>
 </head>
 
@@ -49,51 +51,6 @@
 
 
         <div class="section_wrap">
-            <div class="section2 section">
-                <div class="max_w">
-                    <div class="title_area">
-                        <h2>Back</h2>
-                    </div>
-                    <div class="project_area">
-                        <div class="box">
-                            <div class="img_area">
-                                <img src="img/ato_thum.png" alt="아토">
-                            </div>
-                            <div class="text_area">
-                                <p>아토컴퍼니플러스</p>
-                                <p class="icon_area">
-                                    <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
-                                    <span><img src="img/js_icon.png" alt="JS아이콘"></span>
-                                    <span><img src="img/jquery_icon.png" alt="제이쿼리아이콘"></span>
-                                    <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
-                                    <span><img src="img/mysql_icon.png" alt="mysql아이콘"></span>
-                                </p>
-                                <div class="barogagi">
-                                    <a href="http://atocompany.co.kr/index.html" target="_blank" class="paper-btn">사이트</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="box">
-                            <div class="img_area">
-                                <img src="img/rnd_thum.png" alt="R&D산업대전">
-                            </div>
-                            <div class="text_area">
-                                <p>대한민국 R&D 산업대전</p>
-                                <p class="icon_area">
-                                    <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
-                                    <span><img src="img/js_icon.png" alt="JS아이콘"></span>
-                                    <span><img src="img/jquery_icon.png" alt="제이쿼리아이콘"></span>
-                                    <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
-                                    <span><img src="img/mysql_icon.png" alt="mysql아이콘"></span>
-                                </p>
-                                <div class="barogagi">
-                                    <a href="http://www.ktechshow.or.kr/index.html" target="_blank" class="paper-btn">사이트</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="section2 section">
                 <div class="max_w">
                     <div class="title_area">
@@ -212,6 +169,67 @@
                                 <a href="https://www.goodchoice.kr/" target="_blank" class="paper-btn">원본사이트</a>
                                 <!-- <a href="../yugi/index.html" target="_blank" class="paper-btn">작업물</a> -->
                                 <a href="img/yugi.png" target="_blank" class="paper-btn">Overview</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section2 section">
+                <div class="max_w">
+                    <div class="title_area">
+                        <h2>Work</h2>
+                    </div>
+                    <div class="project_area">
+                        <div class="box">
+                            <div class="img_area">
+                                <img src="img/ato_thum.png" alt="아토">
+                            </div>
+                            <div class="text_area">
+                                <p>아토컴퍼니플러스</p>
+                                <p class="icon_area">
+                                    <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
+                                    <span><img src="img/js_icon.png" alt="JS아이콘"></span>
+                                    <span><img src="img/jquery_icon.png" alt="제이쿼리아이콘"></span>
+                                    <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
+                                    <span><img src="img/mysql_icon.png" alt="mysql아이콘"></span>
+                                </p>
+                                <div class="barogagi">
+                                    <a href="http://atocompany.co.kr/index.html" target="_blank" class="paper-btn">사이트</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="img_area">
+                                <img src="img/rnd_thum.png" alt="R&D산업대전">
+                            </div>
+                            <div class="text_area">
+                                <p>대한민국 R&D 산업대전</p>
+                                <p class="icon_area">
+                                    <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
+                                    <span><img src="img/js_icon.png" alt="JS아이콘"></span>
+                                    <span><img src="img/jquery_icon.png" alt="제이쿼리아이콘"></span>
+                                    <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
+                                    <span><img src="img/mysql_icon.png" alt="mysql아이콘"></span>
+                                </p>
+                                <div class="barogagi">
+                                    <a href="http://www.ktechshow.or.kr/index.html" target="_blank" class="paper-btn">사이트</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="img_area">
+                                <img src="img/apple_thum.jpg" alt="문경사과축제">
+                            </div>
+                            <div class="text_area">
+                                <p>문경사과축제(유지보수)</p>
+                                <p class="icon_area">
+                                    <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
+                                    <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
+                                    <span><img src="img/mysql_icon.png" alt="mysql아이콘"></span>
+                                </p>
+                                <div class="barogagi">
+                                    <a href="https://mgapple.or.kr/index-----.php" target="_blank" class="paper-btn">사이트</a>
+                                </div>
                             </div>
                         </div>
                     </div>
