--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                             </div>
                             <div class="text_area">
                                 <p>아토컴퍼니플러스</p>
+                                <p>작업시기 : 2023.04</p>
                                 <p class="icon_area">
                                     <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
                                     <span><img src="img/js_icon.png" alt="JS아이콘"></span>
@@ -204,6 +205,7 @@
                             </div>
                             <div class="text_area">
                                 <p>대한민국 R&D 산업대전</p>
+                                <p>작업시기 : 2022.12</p>
                                 <p class="icon_area">
                                     <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
                                     <span><img src="img/js_icon.png" alt="JS아이콘"></span>
@@ -222,6 +224,7 @@
                             </div>
                             <div class="text_area">
                                 <p>문경사과축제(유지보수)</p>
+                                <p>작업시기 : 2022.10</p>
                                 <p class="icon_area">
                                     <span class="title_icon"><i class="fa-solid fa-gears"></i></span>
                                     <span><img src="img/php_icon.png" alt="PHP아이콘"></span>
