--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- my -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <title>Document</title>
+    <title>김가은 portfolio</title>
 </head>
 
 <body>
